Configure production profile and CORS